Fixed z-index
Band-aid fix to stop dots from rendering above text

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ p {
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
+    z-index: 2;
 }
 
 a {
